app/assets/stylesheets/pageflow/themes/default/page/line_lengths.scss
/// Max width for tagline and subtitle and content
$page-content-text-max-width: 500px !default;

/// Maximal width for content text and right aligned headlines and content
$page-content-text-position-right-max-width: 500px !default;

/// Max width for header title
$page-header-title-max-width: 700px !default;

.page {
  h1,
  h2 span.subtitle,
  h2 span.tagline,
  h3,
  p {
    max-width: $page-content-text-max-width;
    width: 60%;

    @include mobile {
      width: 100%;
    }
  }

  .title {
    max-width: $page-header-title-max-width;
  }

  &.text_position_right {
    .contentText > * {
      margin-left: auto;
    }

    h1,
    h2 .subtitle,
    h2 .title,
    h2 .tagline,
    h3,
    p {
      margin-left: auto;
      max-width: $page-content-text-position-right-max-width;
    }

    .page_header {
      margin-left: auto;
      width: 100%;

      @include mobile {
        width: 100%;
      }
    }
  }
}

